--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nowhere House</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Micro+5&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Eater&display=swap');
 
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Micro 5', cursive;
-      background: url(https://i.etsystatic.com/18279207/r/il/ffecdf/5021762033/il_570xN.5021762033_slp7.jpg)
-        no-repeat center center fixed;
+      font-family: "Eater", serif;
+      /* background: url(https://i.etsystatic.com/18279207/r/il/ffecdf/5021762033/il_570xN.5021762033_slp7.jpg)
+        no-repeat center center fixed; */
       background-size: cover;
       min-height: 100vh;
       color: white;
+      background-color: rgba(25,50,127)
     }
 
     ::-webkit-scrollbar{
@@ -81,15 +81,35 @@
     }
 
     button {
-      background-color: rgb(12, 83, 3);
+      background-color: rgba(27,69,215);
       border-radius: 30px;
+      padding: 30px;
+      font-size: 25px;
+      color: white;
+      border: none;
+      font-family: "Eater", serif;
+      opacity: 1;
+    }
+
+    button:hover{
+        opacity: 0.5;
+        transition: ease;
+    }
+
+
+    p{
+        margin-left: 200px;
+        margin-right: 200px;
+        font-size: 25px;
+        background-color: rgba(57, 0, 189, 0.568);
+        border-radius: 40px;
     }
   </style>
 </head>
 <body>
   <!-- Navigation bar common to all pages -->
   <div class="navbar">
-    <h1>MAMA MO</h1>
+    <h1>SOLOER</h1>
     <div class="menu">
       <a href="#" data-target="home">Home</a>
       <a href="#" data-target="about">About</a>
@@ -100,11 +120,11 @@
 
   <!-- Page containers -->
   <div id="home" class="page-container active">
-    <h2>Home Page</h2>
-    <p>Welcome to the Nowhere House home page.</p>
+    <h2>WELCOME SOLO PLAYER</h2>
+    <p>Welcome to the enchanting world of Soloer, a captivating 2D pixelated RPG where you embark on an epic journey as a lone hero battling fierce monsters and uncovering hidden treasures. In this immersive adventure, you’ll experience the thrill of solo combat, strategic gameplay, and character progression as you navigate through beautifully crafted pixel art environments.</p>
     <!-- Play button added in the center of the Home page -->
-    <button id="home-play-btn" style="font-size: 25px; margin-top: 20px; padding: 10px 20px;">
-      Play
+    <button id="home-play-btn">
+      START GAME
     </button>
   </div>
 
@@ -115,8 +135,10 @@
 
   <div id="about" class="page-container">
     <h2>About Page</h2>
-    <p>This is the about page content.</p>
-  </div>
+    <p>Welcome to the enchanting world of Soloer, a captivating 2D pixelated RPG where you embark on an epic journey as a lone hero battling fierce monsters and uncovering hidden treasures. In this immersive adventure, you’ll experience the thrill of solo combat, strategic gameplay, and character progression as you navigate through beautifully crafted pixel art environments.</p>
+    <p>Step into the shoes of our brave protagonist, a solitary warrior determined to conquer the darkness that plagues the land. With no allies by your side, every decision counts as you face off against a variety of menacing creatures.</p>
+    <p>Engage in fast-paced, action-packed battles that require skill and strategy. Master your character’s unique abilities and learn the attack patterns of your foes to emerge victorious.</p>
+</div>
 
   <div id="gallery" class="page-container">
     <h2>Gallery Page</h2>
